--- a/SleepMonitor/build.gradle
+++ b/SleepMonitor/build.gradle
@@ -1,14 +1,18 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+//    id 'com.github.dcendents.android-maven'
+//    group = 'com.github.SleepMonitorView'
 }
 
+
+
 android {
-    compileSdk 32
+    compileSdk 31
 
     defaultConfig {
         minSdk 23
-        targetSdk 32
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
