修改gradle试发布远程仓库

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,10 +31,10 @@ android {
     }
     buildFeatures {
 
-        dataBinding = true
+//        dataBinding = true
 
         // for view binding:
-        // viewBinding = true
+         viewBinding = true
     }
 }
 
