--- a/SleepMonitor/build.gradle
+++ b/SleepMonitor/build.gradle
@@ -1,18 +1,19 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
-//    id 'com.github.dcendents.android-maven'
-//    group = 'com.github.SleepMonitorView'
+    id 'maven-publish'
 }
 
+group = 'com.github.SleepMonitorView'
 
+version = '1.0.0'
 
 android {
-    compileSdk 31
+    compileSdk 32
 
     defaultConfig {
         minSdk 23
-        targetSdk 31
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
